--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "rsbuild-dev": "bunx rsbuild dev --open",
     "electron-dev": "bunx electron main.cjs --start-dev",
     "start": "bunx electron main.cjs",
-    "build": "bunx rsbuild build",
+    "build": "bunx rsbuild build && bun run copy-icons",
     "rsbuild-build": "bunx rsbuild build",
+    "copy-icons": "node scripts/build-icons.cjs",
     "type-check": "tsc --noEmit",
     "lint": "bunx @biomejs/biome check --write .",
     "lint-check": "bunx @biomejs/biome check .",
