--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "lib": ["ES2020"],
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./src/renderer",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -20,11 +20,6 @@
     "isolatedModules": true,
     "types": ["node"]
   },
-  "include": [
-    "src/preload.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/renderer/preload.ts"],
+  "exclude": ["node_modules", "dist"]
 }
