--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Boilerplate using Rsbuild as bundler for Electron apps.",
   "type": "module",
   "scripts": {
-    "dev": "bun run scripts/start-dev-rsbuild.cjs",
-    "start": "bunx electron src/main/main.cjs",
-    "build": "bunx rsbuild build && bun run build-preload && bun run copy-main && bun run copy-icons",
-    "build-preload": "tsc -p tsconfig.node.json",
-    "copy-main": "node scripts/copy-main.cjs",
-    "copy-icons": "node scripts/build-icons.cjs",
+    "dev": "bun run scripts/start-dev-fixed.cjs",
+    "start": "bunx electron src/main/main.ts",
+    "build": "bunx rsbuild build && bun run copy-main && bun run copy-icons",
+    "build-preload": "tsc -p tsconfig.preload.json",
+    "copy-main": "bun run scripts/copy-main.ts",
+    "copy-icons": "bun run scripts/build-icons.ts",
     "lint": "bunx @biomejs/biome check .",
     "lint:fix": "bunx @biomejs/biome check --write .",
     "format": "bunx @biomejs/biome format .",
@@ -56,6 +56,7 @@
     "@rsbuild/core": "^1.7.2",
     "@types/minimatch": "^6.0.0",
     "@types/node": "^25.1.0",
+    "@types/wait-on": "^5.3.4",
     "electron": "^40.1.0",
     "electron-builder": "^26.4.0",
     "electron-reload": "^1.5.0",
