--- a/tsconfig.preload.json
+++ b/tsconfig.preload.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "lib": ["ES2020"],
     "outDir": "./dist",
     "strict": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
@@ -15,10 +15,10 @@
     "removeComments": false,
     "noImplicitAny": true,
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": false,
     "isolatedModules": true,
     "types": ["node"]
   },
-  "include": ["src/main/**/*", "src/renderer/preload.ts"],
+  "include": ["src/renderer/preload.ts"],
   "exclude": ["node_modules", "dist", "scripts"]
 }
