--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "bun run scripts/start-dev-fixed.cjs",
-    "start": "bunx electron src/main/main.ts",
-    "build": "bunx rsbuild build && bun run copy-main && bun run copy-icons",
+    "start": "bunx electron dist/main/index.js",
+    "build": "bunx rsbuild build && bun run build-main && bun run copy-icons",
     "build-preload": "tsc -p tsconfig.preload.json",
+    "build-main": "tsc -p tsconfig.main.json",
     "copy-main": "bun run scripts/copy-main.ts",
     "copy-icons": "bun run scripts/build-icons.ts",
     "lint": "bunx @biomejs/biome check .",
@@ -52,13 +53,13 @@
     "winbox": "^0.2.82"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.0",
+    "@biomejs/biome": "^1.9.4",
     "@rsbuild/core": "^1.7.2",
     "@types/minimatch": "^6.0.0",
-    "@types/node": "^25.1.0",
+    "@types/node": "^25.2.0",
     "@types/wait-on": "^5.3.4",
     "electron": "^40.1.0",
-    "electron-builder": "^26.4.0",
+    "electron-builder": "^26.7.0",
     "electron-reload": "^1.5.0",
     "fs-extra": "^11.3.3",
     "typescript": "^5.9.3",
